--- a/JSONMagic.xcodeproj/xcshareddata/xcschemes/JSONMagic-iOS.xcscheme
+++ b/JSONMagic.xcodeproj/xcshareddata/xcschemes/JSONMagic-iOS.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "836E69961BCCD3B40089EAB1"
                BuildableName = "JSONMagic.framework"
-               BlueprintName = "JSONMagic"
+               BlueprintName = "JSONMagic-iOS"
                ReferencedContainer = "container:JSONMagic.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "836E69A01BCCD3B40089EAB1"
-               BuildableName = "JSONMagicTests.xctest"
-               BlueprintName = "JSONMagicTests"
+               BuildableName = "JSONMagicTests-iOS.xctest"
+               BlueprintName = "JSONMagicTests-iOS"
                ReferencedContainer = "container:JSONMagic.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -44,7 +44,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "836E69961BCCD3B40089EAB1"
             BuildableName = "JSONMagic.framework"
-            BlueprintName = "JSONMagic"
+            BlueprintName = "JSONMagic-iOS"
             ReferencedContainer = "container:JSONMagic.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -66,7 +66,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "836E69961BCCD3B40089EAB1"
             BuildableName = "JSONMagic.framework"
-            BlueprintName = "JSONMagic"
+            BlueprintName = "JSONMagic-iOS"
             ReferencedContainer = "container:JSONMagic.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -84,7 +84,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "836E69961BCCD3B40089EAB1"
             BuildableName = "JSONMagic.framework"
-            BlueprintName = "JSONMagic"
+            BlueprintName = "JSONMagic-iOS"
             ReferencedContainer = "container:JSONMagic.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
