--- a/JSONMagic.xcodeproj/xcshareddata/xcschemes/JSONMagicTests-tvOS.xcscheme
+++ b/JSONMagic.xcodeproj/xcshareddata/xcschemes/JSONMagicTests-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -10,16 +10,15 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "836E69A01BCCD3B40089EAB1"
-               BuildableName = "JSONMagicTests.xctest"
-               BlueprintName = "JSONMagicTests"
+               BlueprintIdentifier = "64312C641D2CDD9600485049"
+               BuildableName = "JSONMagicTests-tvOS.xctest"
+               BlueprintName = "JSONMagicTests-tvOS"
                ReferencedContainer = "container:JSONMagic.xcodeproj">
             </BuildableReference>
          </TestableReference>
