--- a/JSONMagic.xcodeproj/xcshareddata/xcschemes/JSONMagic-watchOS.xcscheme
+++ b/JSONMagic.xcodeproj/xcshareddata/xcschemes/JSONMagic-watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "64312C751D2CDE8A00485049"
-               BuildableName = "JSONMagic-watchOS.framework"
+               BuildableName = "JSONMagic.framework"
                BlueprintName = "JSONMagic-watchOS"
                ReferencedContainer = "container:JSONMagic.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "64312C751D2CDE8A00485049"
-            BuildableName = "JSONMagic-watchOS.framework"
+            BuildableName = "JSONMagic.framework"
             BlueprintName = "JSONMagic-watchOS"
             ReferencedContainer = "container:JSONMagic.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "64312C751D2CDE8A00485049"
-            BuildableName = "JSONMagic-watchOS.framework"
+            BuildableName = "JSONMagic.framework"
             BlueprintName = "JSONMagic-watchOS"
             ReferencedContainer = "container:JSONMagic.xcodeproj">
          </BuildableReference>
